# unix_basic

./: 10pthread_detach  10pthread_detach.cpp  BinTree  BinTree.cpp  BubbleSort  Fifo_A  Fifo_A.cpp  Point_Array.cpp  Point_Function  README.md  abort  abort.cpp  access  access.cpp  arfupt.cpp  basic_operator.md  binTree_Di.cpp  chdir  chmod  chmod.cpp  creatPoint  dup  dup.cpp  dup2  excel  excel.cpp  execle  execle.cpp  fcntl  fcntl.cpp  fileCopy  fork  fork.cpp  fork_1  fork_1.cpp  fork_3  fork_3.cpp  fun_ptr  head.h  hello  (+37 more)
Algoritm/: bitOperator  bitOperator.cpp
BinTree_Code/: BiTree.h  BinTree.cpp
C11/: C11.md  a.out  cout.cpp  decltype.cpp  forward  forward.cpp  func  func.cpp  functionPoint  functionPoint.cpp  lambda  lambda.cpp  loop  loop.cpp  make_ptr.cpp  refence.cpp  share.cpp  share_ptr  share_ptr.cpp  tang  tang.cpp  tempCodeRunnerFile.cpp  template.cpp  unique.cpp  unique_ptr  unique_ptr.cpp  unique_test  unique_test.cpp  weak_ptr  weak_ptr.cpp
DRO/: 710.py  711csv.py  8to4.py  B.txt  C.txt  CSV  CSV.cpp  Csvhandle.py  D.txt  DataHandle.h  Data_handle.py  HexToOct.py  a.out  binWrite.py  calculate.h  csvHandle.cpp  csvRead.py  csvTest.py  cvTest.cpp  datahandle2.py  floatWrite  floatWrite.cpp  loop.py  out.txt  read  read.cpp  read.py  readCsv.cpp  stringTest  stringTest.cpp  tempCodeRunnerFile.cpp  toHex.cpp  write.cpp  write.h  write.py
Stack_Code/: CMakeLists.txt  (+3 more)
qt-master/arvapi/src/: CMakeLists.txt  arvapi.cpp  arvapi.h
qt-master/arvapi/tests/UnitTest/: CMakeLists.txt  bash.sh  main.cpp
qt-master/arvapi/tests/UnitTest/src/: ut_arv.cpp
(+556 files in other folders)
